--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
             <div>Cost: <span id="poofCost">69</span></div>
             <button onclick="buyPoof()">Buy</button>
         </div>
+        <img class="heart" src="images/heart.png">
         <div id="sipBox">
             <div>Sips: <span id="sipNum">0</span></div>
             <div>Cost: <span id="sipCost">100</span></div>
             <button onclick="buySip()">Buy</button>
         </div>
+        <img class="heart" src="images/heart.png">
         <div id="lacelessBox">
             <div>Laceless: <span id="lacelessNum">0</span></div>
             <div>Cost: <span id="lacelessCost">1000</span></div>
