--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" sizes="32x32" href="images/icons8-tooth-32.png">
 </head>
-<body>
+<body onload="updateText()">
     <script src="script.js"></script>
     <h1 id="factoryTitle">Princess Omelas Tooth Factory</h1>
     <div id="tooManyTeeth"></div>
