--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </div>
     <div class="resetProgress">
-        <button  id="resetTeeth" onclick="showConfirm()">Reset Teeth</button>
+        <button  id="resetTeeth" onclick="showConfirm()">Wipe Save</button>
         <button id="resetConfirm" onclick="resetProgress()">Confirm</button>
     </div>
 </body>
