Gave popup message own method

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body onload="updateTeeth(), updateText()">
     <div id="screen">
-        <div id="popup">Progress Saved</div>
+        <div id="popup"></div>
         <div id="clickerArea">
             <h1 id="factoryTitle">Tooth Clicker</h1>
             <div id="wingsAndTeeth">
