--- a/index.html
+++ b/index.html
@@ -31,29 +31,134 @@
                 <div id="settings" onclick="displaySettings()">OPTIONS</div>
             </div>
             <div id="upgrades">
-                <div id="cavitiesBox">
-                    <div>Cavities: <span id="cavitiesNum">0</span></div>
-                    <div>Cost: <span id="cavitiesCost">69</span></div>
-                    <button onclick="buyCavities()">Buy</button>
-                    <button class="info"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
-                        <path d="M 25 2 C 12.309295 2 2 12.309295 2 25 C 2 37.690705 12.309295 48 25 48 C 37.690705 48 48 37.690705 48 25 C 48 12.309295 37.690705 2 25 2 z M 25 4 C 36.609824 4 46 13.390176 46 25 C 46 36.609824 36.609824 46 25 46 C 13.390176 46 4 36.609824 4 25 C 4 13.390176 13.390176 4 25 4 z M 25 11 A 3 3 0 0 0 22 14 A 3 3 0 0 0 25 17 A 3 3 0 0 0 28 14 A 3 3 0 0 0 25 11 z M 21 21 L 21 23 L 22 23 L 23 23 L 23 36 L 22 36 L 21 36 L 21 38 L 22 38 L 23 38 L 27 38 L 28 38 L 29 38 L 29 36 L 28 36 L 27 36 L 27 21 L 26 21 L 22 21 L 21 21 z"></path>
-                        </svg></button>
+                <div id="cavitiesBox" class="card">
+                    <div class="card_front">
+                        <div>Cavities: <span id="cavitiesNum">0</span></div>
+                        <div>Cost: <span id="cavitiesCost">69</span></div>
+                        <button onclick="buyCavities()">Buy</button>
+                        <button class="info" onclick="flipCard('#cavitiesBox')"><svg xmlns="http://www.w3.org/2000/svg"
+                                x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
+                                <path
+                                    d="M 25 2 C 12.309295 2 2 12.309295 2 25 C 2 37.690705 12.309295 48 25 48 C 37.690705 48 48 37.690705 48 25 C 48 12.309295 37.690705 2 25 2 z M 25 4 C 36.609824 4 46 13.390176 46 25 C 46 36.609824 36.609824 46 25 46 C 13.390176 46 4 36.609824 4 25 C 4 13.390176 13.390176 4 25 4 z M 25 11 A 3 3 0 0 0 22 14 A 3 3 0 0 0 25 17 A 3 3 0 0 0 28 14 A 3 3 0 0 0 25 11 z M 21 21 L 21 23 L 22 23 L 23 23 L 23 36 L 22 36 L 21 36 L 21 38 L 22 38 L 23 38 L 27 38 L 28 38 L 29 38 L 29 36 L 28 36 L 27 36 L 27 21 L 26 21 L 22 21 L 21 21 z">
+                                </path>
+                            </svg></button>
+                    </div>
+                    <div class="card_back">
+                        <div><br>Add teeth per second</div>
+                        <div>--------------------</div>
+                        <div><span id="test">More Info Coming Soon</span></div>
+                        <button class="info" onclick="flipCard('#cavitiesBox')"><svg viewBox="0 0 24 24"
+                                xmlns="http://www.w3.org/2000/svg" fill="#000000">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                <g id="SVGRepo_iconCarrier">
+                                    <defs>
+                                        <style>
+                                            .cls-1 {
+                                                fill: none;
+                                                stroke: #020202;
+                                                stroke-linecap: square;
+                                                stroke-miterlimit: 10;
+                                                stroke-width: 1.91px;
+                                            }
+                                        </style>
+                                    </defs>
+                                    <g id="dollar_1" data-name="dollar 1">
+                                        <line class="cls-1" x1="12" y1="1.5" x2="12" y2="4.36"></line>
+                                        <line class="cls-1" x1="12" y1="19.64" x2="12" y2="22.5"></line>
+                                        <path class="cls-1"
+                                            d="M6.27,16.77h0a2.87,2.87,0,0,0,2.87,2.87h4.77a3.82,3.82,0,0,0,3.82-3.82h0A3.82,3.82,0,0,0,13.91,12H10.09A3.82,3.82,0,0,1,6.27,8.18h0a3.82,3.82,0,0,1,3.82-3.82h4.77a2.87,2.87,0,0,1,2.87,2.87h0">
+                                        </path>
+                                    </g>
+                                </g>
+                            </svg></button>
+                    </div>
                 </div>
-                <div id="pliersBox">
-                    <div>Pliers: <span id="pliersNum">0</span></div>
-                    <div>Cost: <span id="pliersCost">100</span></div>
-                    <button onclick="buyPliers()">Buy</button>
-                    <button class="info"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
-                        <path d="M 25 2 C 12.309295 2 2 12.309295 2 25 C 2 37.690705 12.309295 48 25 48 C 37.690705 48 48 37.690705 48 25 C 48 12.309295 37.690705 2 25 2 z M 25 4 C 36.609824 4 46 13.390176 46 25 C 46 36.609824 36.609824 46 25 46 C 13.390176 46 4 36.609824 4 25 C 4 13.390176 13.390176 4 25 4 z M 25 11 A 3 3 0 0 0 22 14 A 3 3 0 0 0 25 17 A 3 3 0 0 0 28 14 A 3 3 0 0 0 25 11 z M 21 21 L 21 23 L 22 23 L 23 23 L 23 36 L 22 36 L 21 36 L 21 38 L 22 38 L 23 38 L 27 38 L 28 38 L 29 38 L 29 36 L 28 36 L 27 36 L 27 21 L 26 21 L 22 21 L 21 21 z"></path>
-                        </svg></button>
+                <div id="pliersBox" class="card">
+                    <div class="card_front">
+                        <div>Pliers: <span id="pliersNum">0</span></div>
+                        <div>Cost: <span id="pliersCost">100</span></div>
+                        <button onclick="buyPliers()">Buy</button>
+                        <button class="info" onclick="flipCard('#pliersBox')"><svg xmlns="http://www.w3.org/2000/svg"
+                                x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
+                                <path
+                                    d="M 25 2 C 12.309295 2 2 12.309295 2 25 C 2 37.690705 12.309295 48 25 48 C 37.690705 48 48 37.690705 48 25 C 48 12.309295 37.690705 2 25 2 z M 25 4 C 36.609824 4 46 13.390176 46 25 C 46 36.609824 36.609824 46 25 46 C 13.390176 46 4 36.609824 4 25 C 4 13.390176 13.390176 4 25 4 z M 25 11 A 3 3 0 0 0 22 14 A 3 3 0 0 0 25 17 A 3 3 0 0 0 28 14 A 3 3 0 0 0 25 11 z M 21 21 L 21 23 L 22 23 L 23 23 L 23 36 L 22 36 L 21 36 L 21 38 L 22 38 L 23 38 L 27 38 L 28 38 L 29 38 L 29 36 L 28 36 L 27 36 L 27 21 L 26 21 L 22 21 L 21 21 z">
+                                </path>
+                            </svg></button>
+                    </div>
+                    <div class="card_back">
+                        <div><br>Add teeth per click</div>
+                        <div>--------------------</div>
+                        <div><span id="test">More Info Coming Soon</span></div>
+                        <button class="info" onclick="flipCard('#pliersBox')"><svg viewBox="0 0 24 24"
+                                xmlns="http://www.w3.org/2000/svg" fill="#000000">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                <g id="SVGRepo_iconCarrier">
+                                    <defs>
+                                        <style>
+                                            .cls-1 {
+                                                fill: none;
+                                                stroke: #020202;
+                                                stroke-linecap: square;
+                                                stroke-miterlimit: 10;
+                                                stroke-width: 1.91px;
+                                            }
+                                        </style>
+                                    </defs>
+                                    <g id="dollar_1" data-name="dollar 1">
+                                        <line class="cls-1" x1="12" y1="1.5" x2="12" y2="4.36"></line>
+                                        <line class="cls-1" x1="12" y1="19.64" x2="12" y2="22.5"></line>
+                                        <path class="cls-1"
+                                            d="M6.27,16.77h0a2.87,2.87,0,0,0,2.87,2.87h4.77a3.82,3.82,0,0,0,3.82-3.82h0A3.82,3.82,0,0,0,13.91,12H10.09A3.82,3.82,0,0,1,6.27,8.18h0a3.82,3.82,0,0,1,3.82-3.82h4.77a2.87,2.87,0,0,1,2.87,2.87h0">
+                                        </path>
+                                    </g>
+                                </g>
+                            </svg></button>
+                    </div>
                 </div>
-                <div id="teeththiefBox">
-                    <div>Teeth Thieves: <span id="teeththiefNum">0</span></div>
-                    <div>Cost: <span id="teeththiefCost">1000</span></div>
-                    <button onclick="buyTeeththief()">Buy</button>
-                    <button class="info"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
-                        <path d="M 25 2 C 12.309295 2 2 12.309295 2 25 C 2 37.690705 12.309295 48 25 48 C 37.690705 48 48 37.690705 48 25 C 48 12.309295 37.690705 2 25 2 z M 25 4 C 36.609824 4 46 13.390176 46 25 C 46 36.609824 36.609824 46 25 46 C 13.390176 46 4 36.609824 4 25 C 4 13.390176 13.390176 4 25 4 z M 25 11 A 3 3 0 0 0 22 14 A 3 3 0 0 0 25 17 A 3 3 0 0 0 28 14 A 3 3 0 0 0 25 11 z M 21 21 L 21 23 L 22 23 L 23 23 L 23 36 L 22 36 L 21 36 L 21 38 L 22 38 L 23 38 L 27 38 L 28 38 L 29 38 L 29 36 L 28 36 L 27 36 L 27 21 L 26 21 L 22 21 L 21 21 z"></path>
-                        </svg></button>
+                <div id="teeththiefBox" class="card">
+                    <div class="card_front">
+                        <div>Teeth Thieves: <span id="teeththiefNum">0</span></div>
+                        <div>Cost: <span id="teeththiefCost">1000</span></div>
+                        <button onclick="buyTeeththief()">Buy</button>
+                        <button class="info" onclick="flipCard('#teeththiefBox')"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100"
+                                height="100" viewBox="0 0 50 50">
+                                <path
+                                    d="M 25 2 C 12.309295 2 2 12.309295 2 25 C 2 37.690705 12.309295 48 25 48 C 37.690705 48 48 37.690705 48 25 C 48 12.309295 37.690705 2 25 2 z M 25 4 C 36.609824 4 46 13.390176 46 25 C 46 36.609824 36.609824 46 25 46 C 13.390176 46 4 36.609824 4 25 C 4 13.390176 13.390176 4 25 4 z M 25 11 A 3 3 0 0 0 22 14 A 3 3 0 0 0 25 17 A 3 3 0 0 0 28 14 A 3 3 0 0 0 25 11 z M 21 21 L 21 23 L 22 23 L 23 23 L 23 36 L 22 36 L 21 36 L 21 38 L 22 38 L 23 38 L 27 38 L 28 38 L 29 38 L 29 36 L 28 36 L 27 36 L 27 21 L 26 21 L 22 21 L 21 21 z">
+                                </path>
+                            </svg></button>
+                    </div>
+                    <div class="card_back">
+                        <div><br>Add tps and tpc</div>
+                        <div>--------------------</div>
+                        <div><span id="test">More Info Coming Soon</span></div>
+                        <button class="info" onclick="flipCard('#teeththiefBox')"><svg viewBox="0 0 24 24"
+                                xmlns="http://www.w3.org/2000/svg" fill="#000000">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                <g id="SVGRepo_iconCarrier">
+                                    <defs>
+                                        <style>
+                                            .cls-1 {
+                                                fill: none;
+                                                stroke: #020202;
+                                                stroke-linecap: square;
+                                                stroke-miterlimit: 10;
+                                                stroke-width: 1.91px;
+                                            }
+                                        </style>
+                                    </defs>
+                                    <g id="dollar_1" data-name="dollar 1">
+                                        <line class="cls-1" x1="12" y1="1.5" x2="12" y2="4.36"></line>
+                                        <line class="cls-1" x1="12" y1="19.64" x2="12" y2="22.5"></line>
+                                        <path class="cls-1"
+                                            d="M6.27,16.77h0a2.87,2.87,0,0,0,2.87,2.87h4.77a3.82,3.82,0,0,0,3.82-3.82h0A3.82,3.82,0,0,0,13.91,12H10.09A3.82,3.82,0,0,1,6.27,8.18h0a3.82,3.82,0,0,1,3.82-3.82h4.77a2.87,2.87,0,0,1,2.87,2.87h0">
+                                        </path>
+                                    </g>
+                                </g>
+                            </svg></button>
+                    </div>
                 </div>
             </div>
             <div id="statistics">
