Added new shop item

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="card_back">
                         <div><br>Add teeth per second</div>
                         <div>--------------------</div>
-                        <div><span id="test">More Info Coming Soon</span></div>
+                        <div><span id="test">"They didn't floss"</span></div>
                         <button class="info" onclick="flipCard('#cavitiesBox')"><svg viewBox="0 0 24 24"
                                 xmlns="http://www.w3.org/2000/svg" fill="#000000">
                                 <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -89,7 +89,7 @@
                     <div class="card_back">
                         <div><br>Add teeth per click</div>
                         <div>--------------------</div>
-                        <div><span id="test">More Info Coming Soon</span></div>
+                        <div><span id="test">"Rip them out by hand"</span></div>
                         <button class="info" onclick="flipCard('#pliersBox')"><svg viewBox="0 0 24 24"
                                 xmlns="http://www.w3.org/2000/svg" fill="#000000">
                                 <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -122,8 +122,9 @@
                         <div>Teeth Thieves: <span id="teeththiefNum">0</span></div>
                         <div>Cost: <span id="teeththiefCost">1000</span></div>
                         <button onclick="buyTeeththief()">Buy</button>
-                        <button class="info" onclick="flipCard('#teeththiefBox')"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100"
-                                height="100" viewBox="0 0 50 50">
+                        <button class="info" onclick="flipCard('#teeththiefBox')"><svg
+                                xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100"
+                                viewBox="0 0 50 50">
                                 <path
                                     d="M 25 2 C 12.309295 2 2 12.309295 2 25 C 2 37.690705 12.309295 48 25 48 C 37.690705 48 48 37.690705 48 25 C 48 12.309295 37.690705 2 25 2 z M 25 4 C 36.609824 4 46 13.390176 46 25 C 46 36.609824 36.609824 46 25 46 C 13.390176 46 4 36.609824 4 25 C 4 13.390176 13.390176 4 25 4 z M 25 11 A 3 3 0 0 0 22 14 A 3 3 0 0 0 25 17 A 3 3 0 0 0 28 14 A 3 3 0 0 0 25 11 z M 21 21 L 21 23 L 22 23 L 23 23 L 23 36 L 22 36 L 21 36 L 21 38 L 22 38 L 23 38 L 27 38 L 28 38 L 29 38 L 29 36 L 28 36 L 27 36 L 27 21 L 26 21 L 22 21 L 21 21 z">
                                 </path>
@@ -132,7 +133,7 @@
                     <div class="card_back">
                         <div><br>Add tps and tpc</div>
                         <div>--------------------</div>
-                        <div><span id="test">More Info Coming Soon</span></div>
+                        <div><span id="test">"They steal teeth I guess"</span></div>
                         <button class="info" onclick="flipCard('#teeththiefBox')"><svg viewBox="0 0 24 24"
                                 xmlns="http://www.w3.org/2000/svg" fill="#000000">
                                 <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -158,6 +159,61 @@
                                     </g>
                                 </g>
                             </svg></button>
+                    </div>
+                </div>
+                <div id="dentistBox" class="card">
+                    <div class="card_front">
+                        <div>Black Market Dentists: <span id="dentistNum">0</span></div>
+                        <div>Cost: <span id="dentistCost">120000</span></div>
+                        <button onclick="buyDentists()">Buy</button>
+                        <button class="info" onclick="flipCard('#dentistBox')"><svg xmlns="http://www.w3.org/2000/svg"
+                                x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
+                                <path
+                                    d="M 25 2 C 12.309295 2 2 12.309295 2 25 C 2 37.690705 12.309295 48 25 48 C 37.690705 48 48 37.690705 48 25 C 48 12.309295 37.690705 2 25 2 z M 25 4 C 36.609824 4 46 13.390176 46 25 C 46 36.609824 36.609824 46 25 46 C 13.390176 46 4 36.609824 4 25 C 4 13.390176 13.390176 4 25 4 z M 25 11 A 3 3 0 0 0 22 14 A 3 3 0 0 0 25 17 A 3 3 0 0 0 28 14 A 3 3 0 0 0 25 11 z M 21 21 L 21 23 L 22 23 L 23 23 L 23 36 L 22 36 L 21 36 L 21 38 L 22 38 L 23 38 L 27 38 L 28 38 L 29 38 L 29 36 L 28 36 L 27 36 L 27 21 L 26 21 L 22 21 L 21 21 z">
+                                </path>
+                            </svg></button>
+                    </div>
+                    <div class="card_back">
+                        <div><br>More teeth per click</div>
+                        <div>--------------------</div>
+                        <div><span id="test">"Don't ask"</span></div>
+                        <button class="info" onclick="flipCard('#dentistBox')"><svg viewBox="0 0 24 24"
+                                xmlns="http://www.w3.org/2000/svg" fill="#000000">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                <g id="SVGRepo_iconCarrier">
+                                    <defs>
+                                        <style>
+                                            .cls-1 {
+                                                fill: none;
+                                                stroke: #020202;
+                                                stroke-linecap: square;
+                                                stroke-miterlimit: 10;
+                                                stroke-width: 1.91px;
+                                            }
+                                        </style>
+                                    </defs>
+                                    <g id="dollar_1" data-name="dollar 1">
+                                        <line class="cls-1" x1="12" y1="1.5" x2="12" y2="4.36"></line>
+                                        <line class="cls-1" x1="12" y1="19.64" x2="12" y2="22.5"></line>
+                                        <path class="cls-1"
+                                            d="M6.27,16.77h0a2.87,2.87,0,0,0,2.87,2.87h4.77a3.82,3.82,0,0,0,3.82-3.82h0A3.82,3.82,0,0,0,13.91,12H10.09A3.82,3.82,0,0,1,6.27,8.18h0a3.82,3.82,0,0,1,3.82-3.82h4.77a2.87,2.87,0,0,1,2.87,2.87h0">
+                                        </path>
+                                    </g>
+                                </g>
+                            </svg></button>
+                    </div>
+                    <div class="locked" id="dentistLocked"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                            <g id="SVGRepo_iconCarrier">
+                                <path
+                                    d="M12 14.5V16.5M7 10.0288C7.47142 10 8.05259 10 8.8 10H15.2C15.9474 10 16.5286 10 17 10.0288M7 10.0288C6.41168 10.0647 5.99429 10.1455 5.63803 10.327C5.07354 10.6146 4.6146 11.0735 4.32698 11.638C4 12.2798 4 13.1198 4 14.8V16.2C4 17.8802 4 18.7202 4.32698 19.362C4.6146 19.9265 5.07354 20.3854 5.63803 20.673C6.27976 21 7.11984 21 8.8 21H15.2C16.8802 21 17.7202 21 18.362 20.673C18.9265 20.3854 19.3854 19.9265 19.673 19.362C20 18.7202 20 17.8802 20 16.2V14.8C20 13.1198 20 12.2798 19.673 11.638C19.3854 11.0735 18.9265 10.6146 18.362 10.327C18.0057 10.1455 17.5883 10.0647 17 10.0288M7 10.0288V8C7 5.23858 9.23858 3 12 3C14.7614 3 17 5.23858 17 8V10.0288"
+                                    stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                </path>
+                            </g>
+                        </svg>
+                        <div>Pliers Left: &nbsp;<span id="pliersLeft">0</span> / 20</div>
                     </div>
                 </div>
             </div>
